# Sensitive_Data_Protection_in_Testing_Environment

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: datamask.config.example.yaml  datamask.fields.example.yaml
examples/: quickstart.py
src/datamask/: __init__.py  cli.py  config.py  runner.py
src/datamask.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/datamask/connectors/: __init__.py  base.py  sql.py
src/datamask/detection/: __init__.py  overrides.py  patterns.py  pipeline.py  result.py
src/datamask/history/: __init__.py  store.py
src/datamask/llm/: __init__.py  base.py  factory.py  local_provider.py  openai_provider.py
src/datamask/masking/: __init__.py  engine.py  format.py  rules.py  seed_store.py
src/datamask/masking/dictionaries/: __init__.py
src/datamask/masking/dictionaries/data/: first_names.txt  last_names.txt  us_cities.txt
src/datamask/validation/: __init__.py  masking_completeness.py  result.py  row_count.py  schema_elements.py  testdata.py  validator.py
tests/: test_end_to_end.py  test_seed_map.py  test_validation.py
